lib/src/ffi.dart


final ImagingDrawWideLine = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 x0, Int32 y0, Int32 x1, Int32 y1, Pointer<Uint8> ink, Int32 width, Int32 op),
  int Function(Pointer<NativeType> im, int x0, int y0, int x1, int y1, Pointer<Uint8> ink, int width, int op)
>('ImagingDrawWideLine');

final ImagingDrawPieslice = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 x0, Int32 y0, Int32 x1, Int32 y1, Float start, Float end, Pointer<Uint8> ink, Int32 fill, Int32 width, Int32 op),
  int Function(Pointer<NativeType> im, int x0, int y0, int x1, int y1, double start, double end, Pointer<Uint8> ink, int fill, int width, int op)
>('ImagingDrawPieslice');

final ImagingDrawPoint = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 x, Int32 y, Pointer<Uint8> ink, Int32 op),
  int Function(Pointer<NativeType> im, int x, int y, Pointer<Uint8> ink, int op)
>('ImagingDrawPoint');

final ImagingDrawPolygon = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 points, Pointer<Int32> xy, Pointer<Uint8> ink, Int32 fill, Int32 op),
  int Function(Pointer<NativeType> im, int points, Pointer<Int32> xy, Pointer<Uint8> ink, int fill, int op)
>('ImagingDrawPolygon');

final ImagingDrawRectangle = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 x0, Int32 y0, Int32 x1, Int32 y1, Pointer<Uint8> ink, Int32 fill, Int32 width, Int32 op),
  int Function(Pointer<NativeType> im, int x0, int y0, int x1, int y1, Pointer<Uint8> ink, int fill, int width, int op)
>('ImagingDrawRectangle');

final ImagingOutlineNew = libImaging.lookupFunction<
  Pointer<NativeType> Function(),
  Pointer<NativeType> Function()
>('ImagingOutlineNew');

final ImagingOutlineDelete = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> outline),
  void Function(Pointer<NativeType> outline)
>('ImagingOutlineDelete');

final ImagingDrawOutline = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> outline, Pointer<Uint8> ink, Int32 fill, Int32 op),
  int Function(Pointer<NativeType> im, Pointer<NativeType> outline, Pointer<Uint8> ink, int fill, int op)
>('ImagingDrawOutline');

final ImagingOutlineMove = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> outline, Float x, Float y),
  int Function(Pointer<NativeType> outline, double x, double y)
>('ImagingOutlineMove');

final ImagingOutlineLine = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> outline, Float x, Float y),
  int Function(Pointer<NativeType> outline, double x, double y)
>('ImagingOutlineLine');

final ImagingOutlineCurve = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> outline, Float x1, Float y1, Float x2, Float y2, Float x3, Float y3),
  int Function(Pointer<NativeType> outline, double x1, double y1, double x2, double y2, double x3, double y3)
>('ImagingOutlineCurve');

final ImagingOutlineTransform = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> outline, Pointer<Double> a),
  int Function(Pointer<NativeType> outline, Pointer<Double> a)
>('ImagingOutlineTransform');

final ImagingOutlineClose = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> outline),
  int Function(Pointer<NativeType> outline)
>('ImagingOutlineClose');

final ImagingEffectSpread = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn, Int32 distance),
  Pointer<NativeType> Function(Pointer<NativeType> imIn, int distance)
>('ImagingEffectSpread');

final ImagingEffectNoise = libImaging.lookupFunction<
  Pointer<NativeType> Function(Int32 xsize, Int32 ysize, Float sigma),
  Pointer<NativeType> Function(int xsize, int ysize, double sigma)
>('ImagingEffectNoise');

final ImagingEffectMandelbrot = libImaging.lookupFunction<
  Pointer<NativeType> Function(Int32 xsize, Int32 ysize, Pointer<Double> extent, Int32 quality),
  Pointer<NativeType> Function(int xsize, int ysize, Pointer<Double> extent, int quality)
>('ImagingEffectMandelbrot');

final ImagingToString = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 orientation, Pointer<Utf8> buffer),
  int Function(Pointer<NativeType> im, int orientation, Pointer<Utf8> buffer)
>('ImagingToString');

final ImagingFromString = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 orientation, Pointer<Utf8> buffer),
  int Function(Pointer<NativeType> im, int orientation, Pointer<Utf8> buffer)
>('ImagingFromString');

final ImagingOpenPPM = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> filename),
  Pointer<NativeType> Function(Pointer<Utf8> filename)
>('ImagingOpenPPM');

final ImagingSavePPM = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<Utf8> filename),
  int Function(Pointer<NativeType> im, Pointer<Utf8> filename)
>('ImagingSavePPM');

final ImagingCRC32 = libImaging.lookupFunction<
  Uint32 Function(Uint32 crc, Pointer<Uint8> buffer, Int32 bytes),
  int Function(int crc, Pointer<Uint8> buffer, int bytes)
>('ImagingCRC32');

final ImagingBcnDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingBcnDecode');

final ImagingBitDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingBitDecode');

final ImagingEpsEncode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, Int32 bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingEpsEncode');

final ImagingFliDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingFliDecode');

final ImagingGifDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingGifDecode');

final ImagingGifEncode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, Int32 bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingGifEncode');

final ImagingHexDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingHexDecode');

final ImagingMspDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingMspDecode');

final ImagingPackbitsDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingPackbitsDecode');

final ImagingPcdDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingPcdDecode');

final ImagingPcxDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingPcxDecode');

final ImagingPcxEncode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, Int32 bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingPcxEncode');

final ImagingRawDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingRawDecode');

final ImagingRawEncode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, Int32 bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingRawEncode');

final ImagingSgiRleDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingSgiRleDecode');

final ImagingSgiRleDecodeCleanup = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> state),
  int Function(Pointer<NativeType> state)
>('ImagingSgiRleDecodeCleanup');

final ImagingSunRleDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingSunRleDecode');

final ImagingTgaRleDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingTgaRleDecode');

final ImagingTgaRleEncode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, Int32 bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingTgaRleEncode');

final ImagingXbmDecode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, IntPtr bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingXbmDecode');

final ImagingXbmEncode = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, Int32 bytes),
  int Function(Pointer<NativeType> im, Pointer<NativeType> state, Pointer<Uint8> buffer, int bytes)
>('ImagingXbmEncode');

final ImagingPackBGR = libImaging.lookupFunction<
  Void Function(Pointer<Uint8> c_out, Pointer<Uint8> c_in, Int32 pixels),
  void Function(Pointer<Uint8> c_out, Pointer<Uint8> c_in, int pixels)
>('ImagingPackBGR');

final ImagingUnpackYCC = libImaging.lookupFunction<
  Void Function(Pointer<Uint8> c_out, Pointer<Uint8> c_in, Int32 pixels),
  void Function(Pointer<Uint8> c_out, Pointer<Uint8> c_in, int pixels)
>('ImagingUnpackYCC');

final ImagingUnpackYCCA = libImaging.lookupFunction<
  Void Function(Pointer<Uint8> c_out, Pointer<Uint8> c_in, Int32 pixels),
  void Function(Pointer<Uint8> c_out, Pointer<Uint8> c_in, int pixels)
>('ImagingUnpackYCCA');

final ImagingConvertRGB2YCbCr = libImaging.lookupFunction<
  Void Function(Pointer<Uint8> c_out, Pointer<Uint8> c_in, Int32 pixels),
  void Function(Pointer<Uint8> c_out, Pointer<Uint8> c_in, int pixels)
>('ImagingConvertRGB2YCbCr');
